q10_gvisor-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gvisor-test
  namespace: team-purple
spec:
  runtimeClassName: gvisor
  nodeSelector:
    kubernetes.io/hostname: node02
  containers:
  - name: nginx
    image: nginx:1.27.1
