q8_p1.yaml
# p1 - Layer 3 deny: messenger -> database
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: p1
  namespace: team-orange
spec:
  endpointSelector:
    matchLabels:
      type: messenger
  egressDeny:
  - toEndpoints:
    - matchLabels:
        type: database
