q8_p2.yaml
# p2 - Layer 4 deny: transmitter -> database (ICMP)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: p2
  namespace: team-orange
spec:
  endpointSelector:
    matchLabels:
      app: transmitter
  egressDeny:
  - toEndpoints:
    - matchLabels:
        type: database
    icmps:
    - fields:
      - type: 8
        family: IPv4
