q8_p3.yaml
# p3 - Layer 3 with Mutual Authentication: database -> messenger
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: p3
  namespace: team-orange
spec:
  endpointSelector:
    matchLabels:
      type: database
  egress:
  - toEndpoints:
    - matchLabels:
        type: messenger
    authentication:
      mode: required
